--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 dsge/output_data/*/*/estimate/work
 dsge/output_data/*/*/estimate/tables
 dsge/output_data/*/*/forecast
+!dsge/output_data/m1010/ss20/forecast/tables/*
 plot/Tables/Bloomberg_rstar_spreads.xlsx
 plot/Figures*
